<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armando_controller</name>
  <version>0.0.0</version>
  <description>TODO: ROS 2 package for armando_controller</description>
  <maintainer email="mic.lapietra@studenti.unina.it">d_m_m_f</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!--parte aggiunta-->
   
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>controller_manager_msgs</depend>
  
  <!--fine parte aggiunta--> 
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
